# RobotGroundStation

./: .gitignore  CMakeLists.txt  README.en.md  README.md  gcimages.qrc  groundcontrol.qrc
config/: config.json  data.yaml
dll/: config.json
ffmpeg/: ffmpeg.cpp  ffmpeg.h  ffmpeghead.h
libs/YAML/lib/: yaml-cppd.exp  yaml-cppd.lib
opencv/: CVThread.cpp  CVThread.h
opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
opencv/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules.cmake  opencv_aruco480d.lib  opencv_bgsegm480d.lib  opencv_bioinspired480d.lib  opencv_calib3d480d.lib  opencv_ccalib480d.lib  opencv_core480d.lib  opencv_cvv480d.lib  opencv_datasets480d.lib  opencv_dnn480d.lib  opencv_dnn_objdetect480d.lib  opencv_dnn_superres480d.lib  opencv_dpm480d.lib  opencv_face480d.lib  opencv_features2d480d.lib  opencv_flann480d.lib  opencv_fuzzy480d.lib  opencv_gapi480d.lib  opencv_hfs480d.lib  opencv_highgui480d.lib  opencv_img_hash480d.lib  opencv_imgcodecs480d.lib  opencv_imgproc480d.lib  opencv_intensity_transform480d.lib  opencv_line_descriptor480d.lib  opencv_mcc480d.lib  opencv_ml480d.lib  opencv_objdetect480d.lib  opencv_optflow480d.lib  opencv_phase_unwrapping480d.lib  opencv_photo480d.lib  opencv_plot480d.lib  opencv_quality480d.lib  opencv_rapid480d.lib  opencv_reg480d.lib  opencv_rgbd480d.lib  opencv_saliency480d.lib  opencv_shape480d.lib  (+15 more)
src/: Application.cpp  Application.h  GCToolbox.cpp  GCToolbox.h  GroundControlQmlGlobal.cpp  GroundControlQmlGlobal.h  QmlObjectListModel.cpp  QmlObjectListModel.h  main.cpp
src/algorithm/: ESKF.cpp  ESKF.h
src/geo/: GCGeo.cpp
src/json/: JsonStruct.hpp  SettingManager.cpp  SettingManager.h
src/link/: LinkInterface.cpp  LinkInterface.h  LinkManager.cpp  LinkManager.h
src/link/mavlink/common/: common.h  common.hpp  gtestsuite.hpp  mavlink.h  version.h
src/link/mavlink/minimal/: mavlink.h  minimal.h  version.h
src/link/mavlink/standard/: mavlink.h  standard.h  version.h
src/link/mqtt/: MqttLink.cpp  MqttLink.h
src/link/tcp/: TcpClientLink.cpp  TcpClientLink.h
src/link/udp/: MavlinkUdp.cpp  MavlinkUdp.h  UdpLink.cpp  UdpLink.h
src/tools/log/: log.hpp
src/tools/other/: TimeHelp.cpp  TimeHelp.h  winGetMac.cpp  winGetMac.h
src/vehicle/: MultiVehicleManager.cpp  MultiVehicleManager.h  RovPidControl.cpp  RovPidControl.h  RovVehicle.cpp  RovVehicle.h  Vehicle.cpp
src/vehicle/plan/: GCMapPolyline.cpp  GCMapPolyline.h  GCQGeoCoordinate.cpp  GCQGeoCoordinate.h
ui/: main.qml
ui/CustomControl/: BottomItem.qml  CapVideo.qml  CustomComboBox.qml  CustomTextField.qml  Extends.qml  InstrumentWidget.qml  JoystickThumbPad.qml  LGCAttitudeWidget.qml  LGCButton.qml  LGCColoredImage.qml  LGCCombobox.qml  LGCCompassWidget.qml  LGCGroupBox.qml  LGCInstrumentWidget.qml  LGCLabel.qml  LGCPitchIndicator.qml  LGCVideo.qml  LeftButtonList.qml  MapSetting.qml  Move.qml  MyButton.qml  MyComboBox.qml  MyCourse.qml  MyVideo.qml  OpencvVideo.qml  SBLSetting.qml  SecondaryWidgetExtend.qml  SlideToUnlock.qml  ToolButton.qml  TopItem.qml  TransparentComboBox.qml  VehicleDatas.qml  VirtualJoyStick.qml  qmldir
ui/CustomWindow/: CustomVideoWidget.qml  MainWidget.qml  PopWindow.qml  SecondaryWidget.qml  SettingWidget.qml  WaypointEditWidget.qml  qmldir
ui/GCMap/: HUD.qml  MainMap.qml  MapSetting.qml  qmldir
ui/GCMap/MapTools/: HoverBox.qml  InterestBox.qml  MapArea.qml  MapCircle.qml  MapPlan.qml  MapPlan2.qml  MapPlan_copy.qml  MapRuler.qml  MapTrack.qml  MapVehicle.qml  MapVehicleDatas.qml  MissionSelector.qml  MyIcon.qml  QGCDynamicObjectManager.qml  TargetBox.qml  TargetDatas.qml  UAVBox.qml  VehicleTrack.qml  planner.qml
